--- a/style.css
+++ b/style.css
@@ -176,13 +176,13 @@ nav ul li a:hover{
 }
 
 @media (max-width: 900px){
-    .hero .hero__style{
+    /* .hero .hero__style{
         padding: 0;
-    }
+    } */
 
     .hero .hero__style .note__style{
         width: 100%;
-        padding: 80px 0 ;
+        padding:  0 ;
         
     }
 
